tests/stage2/t3_diagnostics/type_errors/tuple_index_out_of_range.fuse
// EXPECTED ERROR:
// tuple index `5` out of range for
// arity 2

@entrypoint
fn main() {
  val p: (Int, String) = (1, "a")
  println(p.5)
}
